2024-03-04T16:19:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8143487352 # 173
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 2 4136
* notice: prev accum: outdated-unq outdated-all / unq all: 1959 193323 / 1988 197635
* notice: next accum: outdated-unq outdated-all / unq all: 1959 193323 / 1988 197717
* notice: prev exec diff / last date diff / accum: unq all: +0 +82 -0 -88 / +2 +192 -0 -0 / 2 192
* notice: removed / changed dates: [] / [2024-02-19 2024-03-04]

2024-03-04T10:08:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8138512123 # 172
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 2 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1959 193323 / 1986 197525
* notice: next accum: outdated-unq outdated-all / unq all: 1959 193323 / 1988 197635
* notice: prev exec diff / last date diff / accum: unq all: +2 +110 -0 -95 / +2 +110 -0 -0 / 2 110
* notice: removed / changed dates: [] / [2024-02-19 2024-03-04]

2024-03-04T01:04:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8134453734 # 171
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 2 4127
* notice: prev accum: outdated-unq outdated-all / unq all: 1958 193024 / 1986 197429
* notice: next accum: outdated-unq outdated-all / unq all: 1959 193323 / 1986 197525
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -75 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2024-02-18] / [2024-02-19 2024-03-03]

2024-03-03T16:16:27Z: