@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-21T01:04:42Z",
-  "count" : 300,
+  "timestamp" : "2024-03-05T01:03:47Z",
+  "count" : 225,
   "count_minmax" : [ 111, 300 ],
-  "count_decinc" : [ -0, +300 ],
+  "count_decinc" : [ -75, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
