@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-03-04T16:19:50Z",
-  "count_outdated" : 193323,
-  "uniques_outdated" : 1959,
-  "count" : 197717,
+  "timestamp" : "2024-03-05T01:03:47Z",
+  "count_outdated" : 193621,
+  "uniques_outdated" : 1960,
+  "count" : 197813,
   "uniques" : 1988,
   "clones" : [
     {
-      "timestamp": "2024-02-19T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 298 ],
-      "count_decinc": [ 258, 298 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-02-20T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "count_minmax": [ 111, 300 ],
-      "count_decinc": [ 0, 300 ],
+      "count_decinc": [ 75, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-03-04T00:00:00Z",
-      "count": 192,
-      "count_minmax": [ 110, 192 ],
-      "count_decinc": [ 0, 192 ],
+      "count": 288,
+      "count_minmax": [ 110, 288 ],
+      "count_decinc": [ 0, 288 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
