@@ -1,15 +1,10 @@
 {
-  "count": 4136,
+  "count": 4117,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-02-19T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-02-20T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-03-04T00:00:00Z",
-      "count": 192,
+      "count": 288,
       "uniques": 2
     }
   ]
